--- a/src/app/channel-message/channel-message.component.html
+++ b/src/app/channel-message/channel-message.component.html
@@ -1,3 +1,5 @@
-<div class="channel">
+<div class="channel-message"> 
+  <ul class="chat-list">
     <div class="channel"><p id="channelname" name="channelname" #channelname>{{channels}}</p><button (click)=joinClick(channelname.innerHTML)>Join</button></div>
-  </div>
+  </ul>
+</div>
