--- a/src/app/UI/user-ui/user-ui.component.html
+++ b/src/app/UI/user-ui/user-ui.component.html
@@ -1,13 +1,10 @@
-<h1>First Name</h1>
+<h1>Welcome to Martin Chat!</h1>
 <div class="form-group">
-    <label for="usr">Username:</label>
-    <input type="text" class="form-control" id="firstName" name="firstName" #firstName>
+    <input type="text" placeholder="Enter First Name..." class="form-control" id="firstName" name="firstName" #firstName>
   </div>
-  <h2>Last Name</h2>
   <div class="form-group">
-    <label for="chnlName">Channel:</label>
-    <input type="channelName" class="form-control" id="lastName" name="lastName" #lastName>
-    <button (click) ="createChannel(firstName.value, lastName.value)" type="button" class="btn btn-light">Submit</button>
+    <input type="channelName" placeholder="Enter Last Name..." class="form-control" id="lastName" name="lastName" #lastName>
   </div>
+  <button (click) ="createChannel(firstName.value, lastName.value)" type="button" class="form-control">Create Channel</button>
   <p>OR</p>
-    <button (click) ="joinChannel()" type="button" class="btn btn-light">Join Channels</button>
+    <button (click) ="joinChannel()" type="button" class="form-control">Join Channels</button>
