--- a/src/app/chatMessage/chatMessage.component.html
+++ b/src/app/chatMessage/chatMessage.component.html
@@ -1,3 +1,5 @@
+<!--Work on this file using a form group to reduce code and improve patch functionality-->
+
 <div class="chat-message" *ngFor="let item of msgs"> 
   <div>{{item.username}}</div>
     <div class="msg">{{ item.message }}</div>
