Added Forms and fixed my patch

--- a/src/app/UI/user-ui/user-ui.component.html
+++ b/src/app/UI/user-ui/user-ui.component.html
@@ -1,4 +1,4 @@
+<div id="container">
 <h1>Welcome to Martin Chat!</h1>
 <app-login-editor></app-login-editor>
-  <p>OR</p>
-    <button (click) ="joinChannel()" type="button" class="form-control">Join Channels</button>
+</div>
