--- a/src/app/UI/user-ui/user-ui.component.scss
+++ b/src/app/UI/user-ui/user-ui.component.scss
@@ -1,10 +1,21 @@
 #container{
-    background-color: darkcyan;
-    padding: 5%;
+
+    background-color: lightskyblue;
+    height: 40%;
+    padding: 4%;
+}
+
+#backgroundImage
+{
+background-image: url(/assets/images/pexels-kampus-production-5935228.jpg);
+    
+    background-size:cover;
+    height: 100%;
 }
 
 h1 {
     text-align: center;
-    margin-top: 10%;
+    text-shadow: black 2px 2px 2px;
     font-size: 300%;
+    color: white;
 }
