--- a/src/app/channel-message/channel-message.component.scss
+++ b/src/app/channel-message/channel-message.component.scss
@@ -1,15 +1,35 @@
 .channel-message {
-    border: 1px solid black;
-    background-color: lightgray;
-    margin: 1em;
-    padding: 1em;
+    border: 1px;
+    border-radius: 50px;
+    background-color: rgb(196, 227, 247);
+    margin: auto;
+    width: 50%;
+    margin-bottom: 1%;
+    padding: 2em;
 }
 
 .channel {
     font-weight: bold;
-    font-size: large;
+    font-size:xx-large;
+    margin-left: 2%;
 }
 
-.username {
-    color: darkblue;
+.chat-list{
+    display: flex;
+    align-items: center;
 }
+
+.chat-list div button{
+    margin-left: 40%;
+}
+
+button{
+    background-color: rgb(255, 255, 255);
+    border: none;
+    text-align: center;
+    padding: 40%;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
