Done with login UI

--- a/src/app/UI/user-ui/user-ui.component.html
+++ b/src/app/UI/user-ui/user-ui.component.html
@@ -1,5 +1,7 @@
 <div id="container">
+<div>
 <h1>Welcome to Martin Chat!</h1>
 <app-login-editor></app-login-editor>
+</div>
 </div>
 <div id="backgroundImage"></div>
