Adding more CSS styling

--- a/src/app/UI/channel-ui/channel-ui.component.html
+++ b/src/app/UI/channel-ui/channel-ui.component.html
@@ -1,4 +1,6 @@
-<div id="backgroundColor">
+<div id="nav">
 <button (click)="goHome()">Home</button>
+</div>
+<div id="backgroundColor">
 <app-channel-list></app-channel-list>
 </div>
