--- a/src/app/channel-message/channel-message.component.html
+++ b/src/app/channel-message/channel-message.component.html
@@ -1,6 +1,6 @@
 <div class="channel-message"> 
   <div class="chat-list">
-    <div class="channel"id="channelname" name="channelname" #channelname>{{channels}} : </div>
+    <div class="channel" name="channelname" #channelname>{{channels}} : </div>
     <div><button class="joinButton" (click)=joinClick(channelname.innerHTML)>Join</button></div>
   </div>
 </div>
