--- a/src/app/UI/channel-ui/channel-ui.component.scss
+++ b/src/app/UI/channel-ui/channel-ui.component.scss
@@ -1,9 +1,15 @@
 #backgroundColor{
-    background-color: rgb(236, 242, 248);
+    background-color: white;
+}
+
+#nav{
+    width: 100%;
+    background-color: lightgray;
 }
 button{
-    background-color: rgb(196, 227, 247);
-    border: none;
+    background-color: lightgray;
+    border: solid lightgray;
+    color: rgb(63, 63, 63);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
