--- a/src/app/channel-message/channel-message.component.scss
+++ b/src/app/channel-message/channel-message.component.scss
@@ -1,7 +1,7 @@
 .channel-message {
     border: 1px;
-    border-radius: 50px;
-    background-color: rgb(196, 227, 247);
+    border-radius: 20px;
+    background-color: rgb(230, 241, 248);
     margin: auto;
     width: 50%;
     margin-bottom: 1%;
@@ -10,7 +10,8 @@
 
 .channel {
     font-weight: bold;
-    font-size:xx-large;
+    color: rgb(63, 63, 63);
+    font-size:x-large;
     margin-left: 2%;
 }
 
