--- a/src/app/chatMessage/chatMessage.component.scss
+++ b/src/app/chatMessage/chatMessage.component.scss
@@ -1,6 +1,35 @@
 .chat-message {
-    border: 1px solid black;
-    background-color: lightgray;
+    border-radius: 20px;
     margin: 1em;
     padding: 1em;
+}
+
+.chat-message .user
+{
+    font-size: larger;
+    background-color: rgb(155, 215, 255);
+    border-radius: 20px;
+    padding: 1%;
+}
+
+hr{
+    border: none;
+}
+
+.msg{
+    word-wrap: break-word;
+}
+
+
+.msgContainer{
+    font-size: large;
+    background-color: rgb(238, 238, 238);
+    border-radius: 20px;
+    padding: 1%;
+}
+
+button{
+    background-color: white;
+    border: none;
+    padding: 0.5%;
 }
