--- a/src/app/login-editor/login-editor.component.html
+++ b/src/app/login-editor/login-editor.component.html
@@ -1,8 +1,8 @@
    <div id="formContainer">
    <form [formGroup]="loginForm" (submit)="onSubmit()">
     <input type="text" placeholder="Enter First Name..." formControlName="firstName">
-    <input type="channelName" placeholder="Enter Last Name..." formControlName="lastName">
-  <button type="submit" id="subButton">Create Channel</button>
-    <button (click) ="joinChannel()" type="button" class="form-control">Join Channels</button>
+    <input type="channelName" placeholder="Enter Last Name..." formControlName="lastName" >
+  <button type="submit" id="subButton" [disabled]="loginForm.invalid">Create Channel</button>
+    <button (click) ="joinChannel()" type="button" class="form-control" [disabled]="loginForm.invalid">Join Channels</button>
     </form>
    </div>
