--- a/src/app/patch-editor/patch-editor.component.html
+++ b/src/app/patch-editor/patch-editor.component.html
@@ -1,4 +1,4 @@
     <form [formGroup]="editMessage" (submit)="onSubmit()">
         <textarea rows="3" cols="50" formControlName="editedMessage"></textarea>
-        <input type="submit">
+        <input type="submit" [disabled]="editMessage.invalid">
     </form>
